Add @Test to test methods